--- a/resources/views/components/comment.edge
+++ b/resources/views/components/comment.edge
@@ -16,12 +16,16 @@
       </time>
     </div>
     <p class="text-gray-900 leading-6 text-sm">{{ comment.content }}</p>
-    <div class="flex justify-between">
-      @if(auth.isAuthenticated)
-      <button @click="toggleReply('Respondendo a {{ comment.user.name }}', {{ comment.id }})"
-        class="text-xs text-blue-500 font-semibold">Responder</button>
-      @end
-      @!likeButton({ data: comment, url: 'posts.comments.like',  type: 'comment'})
+    <div class="flex justify-between relative">
+      <div>
+        @if(auth.isAuthenticated)
+        <button @click="toggleReply('Respondendo a {{ comment.user.name }}', {{ comment.id }})"
+          class="text-xs text-blue-500 font-semibold">Responder</button>
+        @end
+      </div>
+      <div class="{{ !auth.isAuthenticated && 'absolute right-0 bottom-0' }}">
+        @!likeButton({ data: comment, url: 'posts.comments.like', type: 'comment'})
+      </div>
     </div>
     <ul class="{{ comment.reply &&  mt-6 }}">
       @each((reply, index) in comment.replies)
