--- a/resources/views/components/reply.edge
+++ b/resources/views/components/reply.edge
@@ -1,4 +1,3 @@
-
 <li class="flex relative gap-x-4 mt-2">
   <div class="justify-center flex absolute -bottom-6 left-0 top-0 w-6">
     <div class="w-[1px] {{ index == totalReplies - 1 ? '' : 'bg-gray-200' }}"></div>
@@ -6,7 +5,7 @@
   <img class="bg-gray-50 rounded-full flex-none w-6 h-6 relative"
     src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
     alt="">
-  <div class="rounded-md flex-auto">
+  <div class="rounded-md flex-auto relative">
     <div class="gap-x-4 justify-between flex">
       <div class="text-gray-500 leading-5 text-xs py-[.125rem]">
         <span class="text-gray-900 font-medium">{{ reply.user.name }} {{ reply.user.lastName }}</span>
@@ -18,9 +17,15 @@
     </div>
     <p class="text-gray-900 leading-6 text-sm">{{ reply.content }}</p>
     <div class="flex justify-between">
-      <button @click="toggleReply('Respondendo a {{ reply.user.name }}', {{ reply.id }})"
-        class="text-xs text-blue-500 font-semibold">Responder</button>
-      @!likeButton({ data: reply, url: 'posts.comments.replies.like', type: 'reply' })
+      <div>
+        @if(auth.isAuthenticated)
+        <button @click="toggleReply('Respondendo a {{ reply.user.name }}', {{ reply.id }})"
+          class="text-xs text-blue-500 font-semibold">Responder</button>
+        @end
+      </div>
+      <div class="{{ !auth.isAuthenticated && 'absolute right-0 bottom-0' }}">
+        @!likeButton({ data: reply, url: 'posts.comments.replies.like', type: 'reply' })
+      </div>
     </div>
   </div>
 </li>
