--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -3,5 +3,5 @@
     <img class="h-10 text-blue-500" src="{{ asset('assets/imgs/Logo.svg') }}" alt="">
     <h1 class="text-3xl font-bold dark:text-slate-200">ByteBlog</h1>
   </span>
-  <p class="dark:text-slate-400">© 2023 BityBlog. Todos os direitos reservados.</p>
+  <p class="dark:text-slate-400">© 2023 ByteBlog. Todos os direitos reservados.</p>
 </footer>
