--- a/resources/views/components/comment.edge
+++ b/resources/views/components/comment.edge
@@ -1,21 +1,23 @@
 <li class="flex relative gap-x-4 mt-2">
   <div class="justify-center flex absolute -bottom-6 left-0 top-0 w-6">
-    <div class="w-[1px] bg-gray-200"></div>
+    <div class="w-[1px] bg-gray-200 dark:bg-slate-700"></div>
   </div>
-  <img class="bg-gray-50 rounded-full flex-none -left-1 w-8 h-8 relative"
-    src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-    alt="">
-  <div class="ring-gray-200 ring-inset ring-1 p-3 rounded-md flex-auto">
+  <svg class="bg-gray-50 rounded-full flex-none -left-1 w-8 h-8 relative text-gray-300" fill="currentColor" viewBox="0 0 24 24">
+    <path
+      d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z">
+    </path>
+  </svg>
+  <div class="ring-gray-200 dark:ring-gray-700 ring-inset ring-1 p-3 rounded-md flex-auto">
     <div class="gap-x-4 justify-between flex">
       <div class="text-gray-500 leading-5 text-xs py-[.125rem]">
-        <span class="text-gray-900 font-medium">{{ comment.user.name }} {{ comment.user.lastName }}</span>
+        <span class="dark:text-slate-200 text-gray-900 font-medium">{{ comment.user.name }} {{ comment.user.lastName }}</span>
         comentou
       </div>
       <time class="text-gray-500 leading-5 text-xs flex-none py-[.125rem]">
         {{ prettyTime(comment.createdAt) }}
       </time>
     </div>
-    <p class="text-gray-900 leading-6 text-sm">{{ comment.content }}</p>
+    <p class="dark:text-slate-300 text-gray-900 leading-6 text-sm">{{ comment.content }}</p>
     <div class="flex justify-between relative">
       <div>
         @if(auth.isAuthenticated)
