--- a/resources/views/components/hero.edge
+++ b/resources/views/components/hero.edge
@@ -1,6 +1,6 @@
 <div class="flex items-end justify-between">
   <div class="mx-auto max-w-2xl lg:mx-0">
-    <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Minhas Postagens</h2>
+    <h2 class="text-3xl font-bold tracking-tight dark:text-slate-200 text-gray-900 sm:text-4xl">Minhas Postagens</h2>
     <p class="mt-2 text-lg leading-8 text-gray-600">Lista Completa de Todas as Postagens Realizadas pelo Usuário.</p>
   </div>
   <div>
