--- a/resources/views/components/modal.edge
+++ b/resources/views/components/modal.edge
@@ -7,14 +7,14 @@
   <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
     <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
       <div
-        class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg"
+        class="relative transform overflow-hidden rounded-lg bg-white dark:bg-slate-900 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg"
         x-show="open" @click.outside="toggle" x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
         x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100" x-transition:leave="transition ease-in duration-200"
         x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100" x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95">
-        <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
+        <div class="bg-white dark:bg-slate-900 px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
           <div class="flex">
             <div class="mt-3 w-full text-center sm:ml-4 sm:mt-0 sm:text-left">
-              <h2 class="text-lg font-semibold leading-6 text-gray-900 mb-5" id="modal-title">{{{ await $slots.header()
+              <h2 class="text-lg font-semibold leading-6 dark:text-slate-200 text-gray-900 mb-5" id="modal-title">{{{ await $slots.header()
                 }}}</h2>
               <div class="mt-2">
                 {{{ await $slots.main() }}}
@@ -22,7 +22,7 @@
             </div>
           </div>
         </div>
-        <div class="bg-gray-50 px-4 py-3 sm:flex sm:justify-end sm:px-6 gap-2">
+        <div class="bg-gray-50 dark:bg-slate-900 px-4 py-3 sm:flex sm:justify-end sm:px-6 gap-2">
           {{{ await $slots.actions() }}}
         </div>
       </div>
