--- a/resources/views/components/reply.edge
+++ b/resources/views/components/reply.edge
@@ -1,25 +1,27 @@
 <li class="flex relative gap-x-4 mt-2">
   <div class="justify-center flex absolute -bottom-6 left-0 top-0 w-6">
-    <div class="w-[1px] {{ index == totalReplies - 1 ? '' : 'bg-gray-200' }}"></div>
+    <div class="w-[1px] {{ index == totalReplies - 1 ? '' : 'bg-gray-200 dark:bg-slate-700' }}"></div>
   </div>
-  <img class="bg-gray-50 rounded-full flex-none w-6 h-6 relative"
-    src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-    alt="">
+  <svg class="bg-gray-50 rounded-full flex-none w-6 h-6 relative text-gray-300" fill="currentColor" viewBox="0 0 24 24">
+    <path
+      d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z">
+    </path>
+  </svg>
   <div class="rounded-md flex-auto relative">
     <div class="gap-x-4 justify-between flex">
       <div class="text-gray-500 leading-5 text-xs py-[.125rem]">
-        <span class="text-gray-900 font-medium">{{ reply.user.name }} {{ reply.user.lastName }}</span>
+        <span class="dark:text-slate-200 text-gray-900 font-medium">{{ reply.user.name }} {{ reply.user.lastName }}</span>
         respondeu
       </div>
       <time class="text-gray-500 leading-5 text-xs flex-none py-[.125rem]">
         {{ prettyTime(reply.createdAt) }}
       </time>
     </div>
-    <p class="text-gray-900 leading-6 text-sm">{{ reply.content }}</p>
+    <p class="dark:text-slate-300 text-gray-900 leading-6 text-sm">{{ reply.content }}</p>
     <div class="flex justify-between">
       <div>
         @if(auth.isAuthenticated)
-        <button @click="toggleReply('Respondendo a {{ reply.user.name }}', {{ reply.id }})"
+        <button @click="toggleReply('Respondendo a {{ reply.user.name }}', {{ reply.commentId }})"
           class="text-xs text-blue-500 font-semibold">Responder</button>
         @end
       </div>
