--- a/resources/views/pages/posts/favorite.edge
+++ b/resources/views/pages/posts/favorite.edge
@@ -6,8 +6,8 @@
     <div class="mx-auto max-w-7xl px-6 lg:px-8 mt-36">
       <div class="flex items-end justify-between">
         <div class="mx-auto max-w-2xl lg:mx-0">
-          <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Meus Favoritos</h2>
-          <p class="mt-2 text-lg leading-8 text-gray-600">Lista Completa de Todas as Postagens Favoritadas pelo Usuário.</p>
+          <h2 class="text-3xl font-bold tracking-tight dark:text-slate-200 text-gray-900 sm:text-4xl">Meus Favoritos</h2>
+          <p class="mt-2 text-lg leading-8 dark:text-slate-400 text-gray-600">Lista Completa de Todas as Postagens Favoritadas pelo Usuário.</p>
         </div>
       </div>
       <div
