--- a/resources/views/pages/posts/myShow.edge
+++ b/resources/views/pages/posts/myShow.edge
@@ -6,8 +6,8 @@
     <div class="mx-auto max-w-7xl px-6 lg:px-8 mt-36">
       <div class="flex items-end justify-between">
         <div class="mx-auto max-w-2xl lg:mx-0">
-          <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Minhas Postagens</h2>
-          <p class="mt-2 text-lg leading-8 text-gray-600">Lista Completa de Todas as Postagens Realizadas pelo Usuário.</p>
+          <h2 class="text-3xl font-bold tracking-tight dark:text-slate-200 text-gray-900 sm:text-4xl">Minhas Postagens</h2>
+          <p class="mt-2 text-lg leading-8 dark:text-slate-400 text-gray-600">Lista Completa de Todas as Postagens Realizadas pelo Usuário.</p>
         </div>
         <div>
           @button({ '@click': 'toggle', newClass: 'w-full' })
@@ -16,17 +16,17 @@
         </div>
       </div>
       <div
-        class="mx-auto min-h-fit mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+        class="mx-auto min-h-fit mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t dark:border-slate-700 border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
         @if(posts.length > 0)
           @each(post in posts)
             @!post({ post: post })
           @end
         @else
-          <button @click="toggle" class="py-12 px-4 w-[22rem] border-2 border-dashed border-gray-300 hover:border-gray-400 rounded-lg h-72">
+          <button @click="toggle" class="py-12 px-4 w-[22rem] border-2 border-dashed dark:border-slate-700 dark:hover:border-slate-600 border-gray-300 hover:border-gray-400 rounded-lg h-72">
             <div class="text-center">
-              <i class="text-4xl bi bi-plus-square"></i>
-              <h3 class="text-gray-900 font-semibold text-sm mt-2">Sem Postagem</h3>
-              <p class="text-gray-500 text-sm mt-1">Comece criando uma nova postagem.</p>
+              <i class="text-4xl bi bi-plus-square dark:text-slate-200"></i>
+              <h3 class="dark:text-slate-200 text-gray-900 font-semibold text-sm mt-2">Sem Postagem</h3>
+              <p class="dark:text-slate-300 text-gray-500 text-sm mt-1">Comece criando uma nova postagem.</p>
             </div>
           </button>
         @end
@@ -39,7 +39,7 @@
         @end
 
         @slot('main')
-          <form id="postform" class="w-full" action="{{ route('posts.store') }}" method="POST">
+          <form id="postform" class="w-full flex flex-col gap-3" action="{{ route('posts.store') }}" method="POST">
             <div>
               @!input({ type: 'text', id: 'title', name: 'title', label: 'Título', required: true })
             </div>
