--- a/resources/views/components/comment.edge
+++ b/resources/views/components/comment.edge
@@ -1,6 +1,6 @@
 <li class="flex relative gap-x-4 mt-2">
   <div class="justify-center flex absolute -bottom-6 left-0 top-0 w-6">
-    <div class="w-[1px] bg-gray-200 dark:bg-slate-700"></div>
+    <div class="w-[1px]{{ auth.isAuthenticated ? 'bg-gray-200 dark:bg-slate-700' : ''}}"></div>
   </div>
   <svg class="bg-gray-50 rounded-full flex-none -left-1 w-8 h-8 relative text-gray-300" fill="currentColor" viewBox="0 0 24 24">
     <path
