--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-        <a class="hidden" href="{{ route('login.logout') }}"
+        <a href="{{ route('login.logout') }}"
           class="text-sm font-semibold leading-6 dark:text-slate-200 dark:hover:text-blue-500 hover:text-blue-500 text-gray-900">Logout
           <span aria-hidden="true">&rarr;</span></a>
         @else
