--- a/resources/views/components/input.edge
+++ b/resources/views/components/input.edge
@@ -10,7 +10,7 @@
 <div class="mt-2">
   <input {{ $props.serializeExcept(['label', 'required']) }}
     value="{{ flashMessages.get(name, '') ? flashMessages.get(name, '') : '' }}"
-    class="pl-3 block w-full dark:bg-slate-800 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus-visible:outline-none focus:ring-blue-600 sm:text-sm sm:leading-6 {{ flashMessages.has(`errors.${name}`) ? 'ring-red-300' : 'ring-gray-300 dark:ring-white/5' }}">
+    class="pl-3 block w-full dark:bg-slate-800 dark:text-slate-200 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus-visible:outline-none focus:ring-blue-600 sm:text-sm sm:leading-6 {{ flashMessages.has(`errors.${name}`) ? 'ring-red-300' : 'ring-gray-300 dark:ring-white/5' }}">
 </div>
 @if(flashMessages.has(`errors.${name}`))
   <p class="block text-sm font-normal leading-6 text-red-600">{{ flashMessages.get(`errors.${name}`) }}</p>
