--- a/resources/views/pages/posts/favorite.edge
+++ b/resources/views/pages/posts/favorite.edge
@@ -11,13 +11,13 @@
         </div>
       </div>
       <div
-        class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+        class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t dark:border-slate-700 border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
         @if(posts.length > 0)
           @each(post in posts)
             @!post({ post: post })
           @end
         @else
-          <p>Nenhuma postagem favoritada encontrada.</p>
+          <p class="dark:text-slate-300">Nenhuma postagem favoritada encontrada.</p>
         @end
       </div>
     </div>
